# actix-web-o11y

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
grafana/: datasources.yaml
prometheus/: prometheus.yml
src/: lib.rs  main.rs
tests/: health_check.rs
