[package]
name = "RustO11y"
version = "0.1.0"
authors = ["AlanCurrie <ralanc909@Outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "RustO11y"

[dependencies]
actix-web = "4"
actix-web-prom = "0.6.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
prometheus = "0.13"

[dev-dependencies]
reqwest = "0.12"
